<resources>
    <string name="app_name">DACBA</string>
    <string name="app_title">Sistema Móvil de <b>D</b>etección de <b>A</b>lcohol en <b>C</b>onductores, con <b>B</b>loqueo <b>A</b>utomotriz</string>
    <string name="title_activity_home">Hogar</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="title_activity_register">Registrate</string>
    <string name="title_activity_forgot_password">Restablecer contraseña</string>
    <string name="title_activity_confirm_phone_number">Confirmar teléfono celular</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_edit_profile">Editar perfil</string>
    <string name="title_activity_documents">Documentos</string>
    <string name="title_activity_contacts">Contactos</string>
    <string name="title_activity_vehicles">Vehículos</string>
    <string name="title_activity_sub_users">Sub-Usuarios</string>
    <string name="title_activity_alerts">Alertas</string>
    <string name="title_fragment_about_us">Acerca de nosotros</string>
    <string name="title_fragment_terms">Términos y condiciones</string>
    <string name="title_fragment_privacy">Aviso de privacidad</string>
    <string name="title_dialog_alerts">Alerta</string>
    <string name="title_dialog_add_document">Agregar documento</string>
    <string name="title_dialog_edit_document">Editar documento</string>
    <string name="title_dialog_add_contact">Agregar contacto</string>
    <string name="title_dialog_edit_contact">Editar contacto</string>
    <string name="title_dialog_delete_contact">Eliminar contacto</string>
    <string name="title_dialog_register_sub_user">Registrar sub-usuario</string>
    <string name="title_dialog_set_vehicle_user">Usuario del vehículo</string>
    <string name="title_dialog_add_vehicle">Agregar vehículo</string>
    <string name="title_dialog_edit_vehicle">Editar vehículo</string>
    <string name="title_dialog_delete_vehicle">Eliminar vehículo</string>
    <string name="title_dialog_forgot_password">Restablecer contraseña</string>
    <string name="title_dialog_change_password">Change contraseña</string>
    <string name="title_dialog_gps_settings">GPS desactivado</string>
    <string name="title_dialog_invalid_document">Documento inválido</string>
    <string name="title_dialog_valid_document">Documento válido</string>
    <string name="title_dialog_paring_intructions">Intrucciones de vinculación</string>
    <string name="txvw_project_description">Un sistema capaz de medir los niveles de alcohol en la sangre de conductores de autos mediante el uso de uno o varios sensores. Por medio de estos datos, se determina si estos niveles del alcohol en la sangre son superiores a los permitidos según normativas, e impedir al conductor hacer uso de su automóvil, generando una señal que permita el bloqueo de encendido o arranque del motor.</string>
    <string name="btn_login_name">Iniciar sesión</string>
    <string name="btn_register_name">Regístrate</string>
    <string name="btn_register_new_user_name">¿Eres nuevo aquí?</string>
    <string name="btn_already_have_an_account">¿Ya tienes una cuenta?</string>
    <string name="btn_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="btn_get_new_password">Obtener nueva contraseña</string>
    <string name="btn_send_instructions">Enviar instruciones</string>
    <string name="btn_confirm_code">Confirmar teléfono</string>
    <string name="btn_resend_code">Reenviar código</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_close">Cerrar</string>
    <string name="btn_send_message">Enviar mensaje</string>
    <string name="btn_save_changes">Guardar cambios</string>
    <string name="btn_add_document">Guardar documento</string>
    <string name="btn_save_contact">Guardar contacto</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_register_sub_user">Registrar Sub-Usuario</string>
    <string name="btn_save_vehicle">Guardar vehículo</string>
    <string name="btn_view_document">Abrir documento actual</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_activate">Activar</string>
    <string name="btn_scan">Escanear</string>
    <string name="btn_settings">Configurar</string>
    <string name="txtv_email_hint">Correo electrónico</string>
    <string name="tv_current_password_hint">Contraseña actual</string>
    <string name="txtv_password_hint">Contraseña</string>
    <string name="txtv_confirm_password_hint">Confirmar contraseña</string>
    <string name="txtv_name_hint">Nombre(s)</string>
    <string name="txtv_last_name_father_hint">Apellido Paterno</string>
    <string name="txtv_last_name_mother_hint">Apellido Materno</string>
    <string name="txtv_cellular_hint">Teléfono celular</string>
    <string name="txtv_calendar_hint">Fecha de nacimiento</string>
    <string name="txtv_confirmation_code">Código de confirmación</string>
    <string name="txtv_serial_key">Clave serial del dispositivo</string>
    <string name="txtv_car_plates">Matrícula automovilística</string>
    <string name="txtv_terms">Al registrar a este usuario usted acepta los </string>
    <string name="tv_delete_contact">¿Desea eliminar el contacto?</string>
    <string name="tv_set_vehicle_user">¿Desea marcar este vehículo bajo su uso?</string>
    <string name="tv_remove_vehicle_user">¿Desea dejar de marcar este vehículo bajo su uso?</string>
    <string name="tv_gps_disabled">El GPS parece estar desactivado, para el correcto funcionamiento de la aplicación activelo por favor.</string>
    <string name="tv_invalid_document">El documento que subío al servidor es inválido. Suba uno nuevo para que sea validado.</string>
    <string name="tv_valid_document">El documento que subío al servidor ha sido denominado válido.</string>
    <string name="tv_pairing_instructions">1.- Presionar el botón de <i>Configurar</i>.\n2.- Encender el Bluetooth de su dispositivo.\n3.- Seleccionar el dispositivo Bluetooth con el nombre <i>DACBA</i>.\n4.- Ingresar el PIN 0123 ó 0000 en caso de error.\n5.- Regresar a la aplicación.\n6.- Presionar el botón de <i>Escanear</i> y seleccionar el dispositivo que vínculo.\n\nEn caso de haber vínculado un dispositivo previamente, sáltese al paso 6.</string>
    <string name="tv_label_user">Usuario</string>
    <string name="tv_label_vehicle">Vehículo</string>
    <string name="chck_terms">Acepto los</string>
    <string name="et_message">Escriba su mensaje abajo</string>
    <string name="et_document_name">Nombre del documento</string>
    <string name="et_document_path">Ruta local del documento</string>
    <string name="txtv_country_calling_code">PTM</string>
    <string-array name="s_country_names">
        <item>MX</item>
        
    </string-array>
    <string-array name="s_country_codes">
        <item>+52</item>
        
    </string-array>
    <string name="nav_menu_home">Hogar</string>
    <string name="nav_menu_profile">Perfil</string>
    <string name="nav_menu_sub_users">Sub-Usuarios</string>
    <string name="nav_menu_vehicles">Vehículos</string>
    <string name="nav_menu_contacts">Contactos</string>
    <string name="nav_menu_alerts">Alertas</string>
    <string name="nav_menu_other_section">Otros</string>
    <string name="nav_menu_configure">Configuración</string>
    <string name="nav_menu_about_us">Acerca de nosotros</string>
    <string name="nav_menu_privacy">Aviso de privacidad</string>
    <string name="nav_menu_logout">Cerrar sesión</string>
    <string name="sub_user_menu_add">Registar Sub-Usaurio</string>
    <string name="mn_item_profile_deactivate">Desactivar cuenta</string>
    <string name="mn_item_change_password">Cambiar contraseña</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="msj_need_one_contact">Necesita mínimo un contacto registrado</string>
    <string name="msj_phone_confirmed">Tu teléfono ha sido confirmado</string>
    <string name="msj_resend_code">El nuevo código ha sido enviado</string>
    <string name="msj_sms_sent">El mensaje ha sido enviado</string>
    <string name="msj_contact_added">El contacto de emergencia ha sido agregado exitosamente</string>
    <string name="msj_contact_saved">Los cambios al contacto de emergencia han sido guardados exitosamente</string>
    <string name="msj_contact_deleted">El contacto ha sido eliminado exitosamente</string>
    <string name="msj_successful_registration">Su registro se ha realizado de forma exitosa</string>
    <string name="msj_sub_user_registered">El sub-usuario has sido registrado de forma exitosa</string>
    <string name="msj_account_deactivated">Su cuenta ha sido desactivada\nPara poder activarla, inicie sesión y confirme nuevamente su teléfono celular</string>
    <string name="msj_vehicle_added">El vehículo ha sido agregado de forma exitosa</string>
    <string name="msj_vehicle_saved">Los cambios al vehículo han sido guardados exitosamente</string>
    <string name="msj_vehicle_deleted">El vehículo ha sido eliminado exitosamente</string>
    <string name="msj_forgot_password">Las instrucciones para restablecer su contraseña han sido enviadas a su correo</string>
    <string name="msj_change_password">Su contraseña ha sido actualizada</string>
    <string name="msj_profile_changes">Sus datos de perfil han sido actualizados</string>
    <string name="msj_no_sub_users">No tiene ningún sub-usuario registrado</string>
    <string name="msj_no_emergency_contacts">No tiene ningún contacto de emergencia registrado</string>
    <string name="msj_no_alerts">No ha recibído ninguna alerta</string>
    <string name="msj_no_vehicles">No tiene ningún vehículo registrado</string>
    <string name="msj_confirmation_sms_sent">Se le ha enviado un mensaje de texto con su código de confirmación</string>
    <string name="msj_change_phone_numer">Si desea cambiar su teléfono celular, póngase en contacto con el equipo de soporte</string>
    <string name="msj_vehicle_user_updated">El usuario del vehículo ha sido actualizado.</string>
    <string name="msj_alert_state_changed">El estado de la alerta ha sido actualizado</string>
    <string name="msj_document">El documento se subío exitosamente al servidor.</string>
    <string name="msj_alert_saved">La alerta ha sido guardada</string>
    <string name="msj_alcohol_test_saved">La prueba de alcohol ha sido guardada</string>
    <string name="error_server">Ocurrió un error, inténtelo de nuevo</string>
    <string name="error_confirmation_sms">Ocurrió un error al enviarle el mensaje de texto, inténtelo de nuevo</string>
    <string name="error_phone_confirmation">Ocurrió un error al confirmar su teléfono, inténtelo de nuevoo</string>
    <string name="warning_login_user">No existe una cuenta registrada a ese correo</string>
    <string name="warning_wrong_password">La contraseña es incorrecta</string>
    <string name="warning_internet">No cuenta con una conexión a internet</string>
    <string name="warning_register_user">Ya existe una cuenta registrada con esos datos</string>
    <string name="warning_register_vehicle">El vehículo que intento registrar le pertenece a otro usuario</string>
    <string name="warning_register_email">El correo con la contraseña temporal no se pudo enviar</string>
    <string name="warning_serial_key">Ingrese una clave serial válida</string>
    <string name="warning_car_plates">Ingrese la mátricula automovilística sin espacios o guiones</string>
    <string name="warning_email">Ingrese un correo electrónico válido</string>
    <string name="warning_name">Ingrese un nombre válido</string>
    <string name="warning_surname">Ingrese un apellido válido</string>
</resources>