<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtv_email_hint"
        android:inputType="textEmailAddress"
        android:maxLength="@integer/email_length"
        android:paddingBottom="@dimen/txtv_bottom_padding"
        android:paddingTop="@dimen/txtv_bottom_padding" />

    <EditText
        android:id="@id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtv_name_hint"
        android:inputType="text"
        android:maxLength="@integer/name_surname_length"
        android:paddingBottom="@dimen/txtv_bottom_padding"
        android:paddingTop="@dimen/txtv_bottom_padding" />

    <EditText
        android:id="@+id/et_paternal_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtv_last_name_father_hint"
        android:inputType="text"
        android:maxLength="@integer/name_surname_length"
        android:paddingBottom="@dimen/txtv_bottom_padding"
        android:paddingTop="@dimen/txtv_bottom_padding" />

    <EditText
        android:id="@+id/et_maternal_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtv_last_name_mother_hint"
        android:inputType="text"
        android:maxLength="@integer/name_surname_length"
        android:paddingBottom="@dimen/txtv_bottom_padding"
        android:paddingTop="@dimen/txtv_bottom_padding" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context="ipn.mobileapp.presenter.activities.RegisterActivity">

        <Spinner
            android:id="@+id/s_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/s_country_names" />

        <TextView
            android:id="@+id/txtv_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_country_calling_code"
            android:maxLength="3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_cellular_hint"
            android:inputType="phone"
            android:maxLength="@integer/phone_number_length"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtv_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/txtv_calendar_hint"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingLeft="@dimen/txtv_edit_text_padding"
            android:paddingTop="@dimen/txtv_bottom_padding"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/ib_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/ic_more_dark_grey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/txtv_terms" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="2dp"
            android:text="@string/title_fragment_terms"
            android:textSize="@dimen/alert_text_preview" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding"
            android:text="@string/btn_register_sub_user" />
    </LinearLayout>
</LinearLayout>