<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:requiresFadingEdge="vertical"
    android:scrollbars="vertical"
    tools:context="ipn.mobileapp.view.activities.RegisterActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_email_hint"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_password_hint"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_confirm_password_hint"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_name_hint"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_last_name_father_hint"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_last_name_mother_hint"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context="ipn.mobileapp.view.activities.RegisterActivity">

            <Spinner
                android:id="@+id/txs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/s_country_names" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/txtv_country_calling_code"
                android:maxLength="3"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtv_cellular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtv_cellular_hint"
                android:inputType="phone"
                android:paddingBottom="@dimen/txtv_bottom_padding"
                android:paddingTop="@dimen/txtv_bottom_padding" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtv_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txtv_calendar_hint"
                android:paddingBottom="@dimen/txtv_bottom_padding"
                android:paddingLeft="@dimen/txtv_edit_text_padding"
                android:paddingTop="@dimen/txtv_bottom_padding"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/ib_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:src="@drawable/ic_more_dark_grey" />
        </LinearLayout>

        <Spinner
            android:id="@+id/txtv_vehicle"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/s_valid_vehicles"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingLeft="20dp"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <EditText
            android:id="@+id/txtv_registration_plates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_registration_plates"
            android:maxLength="10"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <EditText
            android:id="@+id/txtv_serial_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtv_serial_key"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/chck_accept_terms" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="@string/title_fragment_terms"
                android:textSize="@dimen/alert_text_preview" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding"
            android:text="@string/btn_register_name" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/btn_already_have_an_account" />
    </LinearLayout>
</ScrollView>
