<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <Spinner
        android:id="@+id/txtv_vehicle"
        style="@style/spinner_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/s_valid_vehicles"
        android:paddingBottom="@dimen/txtv_bottom_padding"
        android:paddingLeft="20dp"
        android:paddingTop="@dimen/txtv_bottom_padding"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_registration_plates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"
        android:hint="@string/txtv_car_plates"
        android:maxLength="10"
        android:paddingBottom="@dimen/txtv_bottom_padding"
        android:paddingTop="@dimen/txtv_bottom_padding" />

    <EditText
        android:id="@+id/et_serial_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtv_serial_key"
        android:paddingBottom="@dimen/txtv_bottom_padding"
        android:paddingTop="@dimen/txtv_bottom_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_save_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_vehicle" />
    </LinearLayout>
</LinearLayout>