<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:hint="@string/txtv_email_hint"
        android:paddingBottom="@dimen/txtv_bottom_padding"
        android:paddingTop="@dimen/txtv_bottom_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/txtv_bottom_padding"
            android:paddingTop="@dimen/txtv_bottom_padding"
            android:text="@string/btn_send_instructions" />
    </LinearLayout>
</LinearLayout>
